[package]
name = "bonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[dependencies]
rdkafka = "0.31.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
